--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -57,5 +57,8 @@ body {
 }
 
 .user-ino {
-  min-width: 80px;
+  min-width: 800px;
+  @media only screen and (max-width: 768px) {
+    min-width: 80px;
+  }
 }
