--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -56,9 +56,6 @@ body {
   -webkit-box-orient: vertical;
 }
 
-.user-ino {
+.user-info {
   min-width: 800px;
-  @media only screen and (max-width: 768px) {
-    min-width: 80px;
-  }
 }
