Update image display to show product name dynamically

--- a/ShopwareAcademyStorefrontController/src/Resources/views/storefront/page/image.html.twig
+++ b/ShopwareAcademyStorefrontController/src/Resources/views/storefront/page/image.html.twig
@@ -1,6 +1,6 @@
 {% block base_content %}
-    <h1>Some random image</h1>
+    <h1>{{ productName }}</h1>
 
-    <img src="{{ imageUrl }}" alt="test" style="max-width: 70%;">
+    <img src="{{ imageUrl }}" alt="{{ productName }}" style="max-width: 70%;">
 
 {% endblock %}
