--- a/ShopwareAcademyStorefrontController/src/Resources/views/storefront/page/image.html.twig
+++ b/ShopwareAcademyStorefrontController/src/Resources/views/storefront/page/image.html.twig
@@ -1,5 +1,5 @@
 {% block base_content %}
-    <h1>Some random image</h1>
+    <h1>{{ productName }}</h1>
 
     <img src="{{ imageUrl }}" alt="test" style="max-width: 70%;">
 
