--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecureInfo Concierge</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <style>
         .container {
             max-width: 800px;
@@ -118,6 +118,6 @@
         </div>
     </div>
     
-    <script src="{{ url_for('static', path='/js/dashboard.js') }}"></script>
+    <script src="/static/js/dashboard.js"></script>
 </body>
 </html>
