--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecureInfo Concierge</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <div class="container">
@@ -30,6 +30,6 @@
         </div>
     </div>
     
-    <script src="{{ url_for('static', path='/js/login.js') }}"></script>
+    <script src="/static/js/login.js"></script>
 </body>
 </html>
